--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -25,3 +25,94 @@
 .navbar-brand {
     font-family: $navbar-brand-family;
 }
+
+
+// Loading animation
+
+.loadingcontainer {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+}
+
+.loading-screen {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.ninja-face {
+    position: relative;
+    width: 100px;
+    height: 100px;
+    background-color: #333;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.ninja-mask {
+    position: absolute;
+    width: 100%;
+    height: 40px;
+    background-color: #111;
+    top: 20%;
+    left: 0;
+}
+
+.ninja-eyes {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+    z-index: 1;
+}
+
+.eye {
+    width: 20px;
+    height: 20px;
+    background-color: #fff;
+    border-radius: 50%;
+    animation: blink 2s infinite;
+}
+
+.left-eye {
+    animation-delay: 0.2s;
+}
+
+.right-eye {
+    animation-delay: 0.2s;
+}
+
+@keyframes blink {
+    0%, 20%, 50%, 100% {
+        height: 20px;
+    }
+    10%, 40% {
+        height: 2px;
+    }
+}
+
+.loading-text {
+    margin-top: 20px;
+    font-size: 18px;
+    letter-spacing: 2px;
+    animation: fadeIn 2s infinite;
+}
+
+@keyframes fadeIn {
+    0%, 100% {
+        opacity: 0.5;
+    }
+    50% {
+        opacity: 1;
+    }
+}
